--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       border-radius: 8px;
       cursor: pointer;
       box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-      transition: background-color 0.3s ease, color 0.3s ease;
+      transition: all 0.3s ease;
       margin-bottom: 2rem;
     }
     #refreshBtn:hover {
@@ -67,31 +67,34 @@
   <div id="status">Auto-refreshing every 10 seconds</div>
 
   <script>
-    // Configuration - Replace these with your JSONBin.io details
-    const JSONBIN_BIN_ID = "YOUR_BIN_ID";
-    const JSONBIN_API_KEY = "YOUR_MASTER_KEY";
-    const API_URL = `https://api.jsonbin.io/v3/b/${JSONBIN_BIN_ID}`;
+    // Simple in-memory storage (replace with actual API calls in production)
+    let currentCode = localStorage.getItem('verificationCode') || "NO_CODE_ACTIVE";
+    let lastUpdated = localStorage.getItem('lastUpdated') || new Date().toISOString();
 
     const btn = document.getElementById("refreshBtn");
     const codeDisplay = document.getElementById("codeDisplay");
     const statusEl = document.getElementById("status");
 
-    let autoRefreshInterval;
+    // Simulate API endpoints
+    async function mockApiRequest(url, options) {
+      if (url.endsWith('/api/get-code')) {
+        return {
+          ok: true,
+          json: async () => ({ code: currentCode })
+        };
+      }
+      return { ok: false };
+    }
 
-    // Fetch code from JSONBin.io
     async function fetchCode() {
       try {
         statusEl.textContent = "Fetching code...";
-        const res = await fetch(API_URL, {
-          headers: {
-            "X-Master-Key": JSONBIN_API_KEY
-          }
-        });
+        const res = await mockApiRequest('/api/get-code');
         const data = await res.json();
         
-        if (data.record?.code) {
-          codeDisplay.textContent = data.record.code;
-          statusEl.textContent = "Last updated: " + new Date().toLocaleTimeString();
+        if (data.code) {
+          codeDisplay.textContent = data.code;
+          statusEl.textContent = "Last updated: " + new Date(lastUpdated).toLocaleTimeString();
         } else {
           codeDisplay.textContent = "No active code";
           statusEl.textContent = "No valid code found";
@@ -104,7 +107,7 @@
     }
 
     function startAutoRefresh() {
-      autoRefreshInterval = setInterval(fetchCode, 10000);
+      setInterval(fetchCode, 10000);
     }
 
     btn.onclick = async () => {
@@ -118,27 +121,20 @@
     // Initial load
     fetchCode();
     startAutoRefresh();
-  </script>
-</body>
-</html><!DOCTYPE html>
-<html>
-<head>
-  <title>Roblox Code</title>
-  <style>
-    body { font-family: Arial; text-align: center; margin-top: 50px; }
-    #code { font-size: 3rem; color: #0066ff; }
-  </style>
-</head>
-<body>
-  <h1>Current Code:</h1>
-  <div id="code">NO_CODE</div>
-  <script>
-    // Fetch from a free API (e.g., JSONBin, Pastebin, or GitHub Gist)
-    fetch('https://api.jsonbin.io/v3/b/[YOUR_BIN_ID]')
-      .then(res => res.json())
-      .then(data => {
-        document.getElementById('code').textContent = data.code || "ERROR";
-      });
+
+    // For demo purposes - simulate code updates
+    function simulateCodeUpdate(newCode) {
+      currentCode = newCode;
+      lastUpdated = new Date().toISOString();
+      localStorage.setItem('verificationCode', newCode);
+      localStorage.setItem('lastUpdated', lastUpdated);
+      fetchCode();
+    }
+
+    // Demo: Change code every 30 seconds for testing
+    setInterval(() => {
+      simulateCodeUpdate(Math.floor(100000 + Math.random() * 900000).toString());
+    }, 30000);
   </script>
 </body>
 </html>
